# elasticsearch-to-postgres

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  Pipfile  README.md  es_cacert.pem  main.py  pyproject.toml  settings.py
.github/workflows/: ci.yaml
