[tool.poetry]
name = "postgres-syncer"
version = "0.1.0"
description = "Syncs postgres db's between servers"
authors = ["Terry Cain <tcain@bink.com>"]

[tool.poetry.dependencies]
python = "^3.9"
apscheduler = "*"
pylogrus = "*"
elasticsearch = "^7.7.0"
psycopg2-binary = "*"
sqlalchemy = {extras = ["psycopg2"], version = "*"}
python-dateutil = "*"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
